# RustoHebvera

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Procfile  README.md  SECURITY.md  deploy-railway.sh  deploy-render.sh  deploy_to_github.rs  fly.toml  package.json  railway.toml  render.yaml  vercel.json
.github/: pages.yml
.github/workflows/: deploy.yml  rust.yml
api/: index.rs
deployment/: Dockerfile  deploy.sh  docker-compose.yml  prometheus.yml
examples/: input.csv  input.txt
scripts/: deploy_to_upgraded_version.rs
src/: architecture.rs  document_processor.rs  file_processor.rs  fonts.rs  gui.rs  integrations.rs  knowledge_sharing.rs  learning_manager.rs  lib.rs  main.rs  metadata.rs  optimization.rs  quality_control.rs  security.rs  standards.rs  technical_dictionary.rs  technical_terms.rs  template_translator.rs  templates.rs  testing.rs  translation.rs  translation_engine.rs
src/analytics/: engine.rs
src/infrastructure/: distributed_system.rs
src/language_detection/: advanced_detector.rs
src/metrics/: anomaly.rs  collector.rs
src/ml/: prediction.rs
src/morphology/: analyzer.rs  cache.rs  hebrew.rs  mod.rs  patterns.rs  russian.rs  semantic.rs  statistics.rs  utils.rs
src/neural/: attention.rs  learning.rs  mod.rs  model.rs  model_storage.rs  vocabulary.rs
src/technical/: domain_analyzer.rs
src/translation_models/: domain.rs  mod.rs  style.rs
static/: index.html
templates/: inspection_report.json
