[package]
name = "rusto_hebru"
version = "0.1.0"
edition = "2021"
authors = ["Osher David"]
description = "מערכת תרגום דו-לשונית מתקדמת לעברית ורוסית"

[[bin]]
name = "deploy_to_upgraded_version"
path = "scripts/deploy_to_upgraded_version.rs"

[dependencies]
# ניהול אסינכרוני
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# מבני נתונים ומצבים
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# הצפנה ואבטחה
ring = "0.16"
base64 = "0.21"
totp-rs = "5.0"
base32 = "0.4"

# ממשק משתמש
eframe = "0.22"
egui = "0.22"
rfd = "0.11"

# שגיאות וניהול
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# מטמון וביצועים
lru = "0.10"
dashmap = "5.4"

# בדיקות
tokio-test = "0.4"
mockall = "0.11"
criterion = "0.4"

# תלויות לסקריפט העלאה
colored = "2.0"

winapi = { version = "0.3.9", features = ["winuser"] }

[dev-dependencies]
test-case = "3.1"
proptest = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 