[package]
name = "rusto_hebru"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A bilingual translation system between Hebrew and Russian for technical documents"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Neural network and machine learning
tch = "0.13"
rust-bert = "0.20"

# Text processing
regex = "1.0"
lazy_static = "1.4"
unicode-segmentation = "1.10"
whatlang = "0.16"

# Async and concurrency
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"

# Logging and error handling
log = "0.4"
env_logger = "0.10"

# GUI
eframe = "0.22"
egui = "0.22"

# Testing
criterion = "0.5"
mockall = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true 