[package]
name = "rusto_hebru"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A bilingual translation system between Hebrew and Russian for technical documents"
license = "MIT"
repository = "https://github.com/ofer2300/V4"
homepage = "https://rusto-hebru.vercel.app"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Neural network and machine learning
tch = "0.13"
rust-bert = "0.20"

# Text processing
regex = "1.0"
lazy_static = "1.4"
unicode-segmentation = "1.10"
whatlang = "0.16"

# Async and concurrency
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GUI
eframe = { version = "0.22", features = ["persistence", "wgpu"] }
egui = { version = "0.22", features = ["persistence"] }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Web server
axum = { version = "0.6", features = ["headers"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Monitoring and metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Testing
criterion = "0.5"
mockall = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
wiremock = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["desktop"]
desktop = ["eframe/default"]
web = ["eframe/web"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rusto-hebru-server"
path = "src/main.rs" 